--- a/src/app/allusers/notifications/notifications.component.scss
+++ b/src/app/allusers/notifications/notifications.component.scss
@@ -2,7 +2,6 @@
 {
     display:flex;
     flex-direction:column;
-    padding:12px;
 
 }
 
@@ -86,4 +85,90 @@ a {
 .advHref{
 	color:black !important;
 	text-decoration:none;
+}
+
+
+.wrapper{
+	z-index:1000;	
+	position: fixed;
+}
+
+.notification_wrap{
+	width: 500px;
+}
+
+.notification_wrap .notification_icon{
+
+	z-index:1000;
+	width: 50px;
+	height: 50px;
+	font-size: 32px;
+	margin: 0 auto;
+	text-align: center;
+	color: #605dff;
+}
+
+.notification_wrap .notification_icon .fa-bell{
+	cursor: pointer;
+}
+
+.notification_wrap .dropdown{
+	width: 350px;
+	height: auto;
+	background: #fff;
+	border-radius: 5px;
+	box-shadow: 2px 2px 3px rgba(0,0,0,0.125);
+	margin: 15px auto 0;
+	padding: 15px;
+	position: relative;
+	display: none;
+}
+
+.notification_wrap .dropdown .notify_item{
+	display: flex;
+	align-items: center;
+}
+
+.notification_wrap .dropdown .notify_item:last-child{
+	border-bottom: 0px;
+}
+
+.all{
+	display:flex;
+	justify-content:end;
+	width:100%;
+	padding-bottom:5px;
+	border-bottom: 2.2px solid #dbdaff;
+}
+.notification_wrap .dropdown .notify_item .notify_img{
+	margin-right: 15px;
+}
+
+.notification_wrap .dropdown .notify_item .notify_info p{
+	margin-bottom: 5px;
+}
+
+.notification_wrap .dropdown .notify_item .notify_info p span{
+	color: #605dff;
+	margin-left: 5px;
+}
+
+.notification_wrap .dropdown .notify_item .notify_info .notify_time{
+	color: #c5c5e6;
+	font-size: 12px;
+}
+
+.notification_wrap .dropdown:before{
+	content: "";
+	position: absolute;
+	z-index:1000;
+	top: -30px;
+	left: 50%;
+	transform: translateX(-50%);
+	border: 15px solid;
+	border-color: transparent transparent #fff transparent;
+}
+
+.notification_wrap .dropdown.active{
+	display: block;
 }
