--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,47 +1,47 @@
 <div class="fix">
-<nav class="navbar navbarx navbar-dark bg-dark">
-    <div class="navbar-blocks">
-        <div class="navbar-menu">
-            <a *ngIf="isLogin && !isAdmin" mat-raised-button class="mr-2" routerLink="/user/addnewAdvertisement"><i class="fas fa-plus-circle"></i> Добавить Объявление</a>
-            <a  *ngIf="isAdmin" mat-raised-button class="mr-2" routerLink="/admin/changeprop">Пользователи</a>
-            <a  *ngIf="isAdmin" mat-raised-button сlass="m-2" routerLink="/admin/allDocuments">Документы</a>
-            <a  *ngIf="isAdmin" mat-raised-button class="ml-2" routerLink="/admin/rolecontrol">Роли</a>
-            <a  *ngIf="isAdmin" mat-raised-button  class="ml-2"routerLink="/admin/subjectcontrol">Предметы</a>
-           
+    <nav class="navbar navbarx navbar-dark bg-dark">
+        <div class="navbar-blocks">
+            <div class="navbar-menu">
+                <a *ngIf="isLogin && !isAdmin" mat-raised-button class="mr-2" routerLink="/user/addnewAdvertisement"><i class="fas fa-plus-circle"></i> Добавить Объявление</a>
+                <a  *ngIf="isAdmin" mat-raised-button class="mr-2" routerLink="/admin/changeprop">Пользователи</a>
+                <a  *ngIf="isAdmin" mat-raised-button сlass="m-2" routerLink="/admin/allDocuments">Документы</a>
+                <a  *ngIf="isAdmin" mat-raised-button class="ml-2" routerLink="/admin/rolecontrol">Роли</a>
+                <a  *ngIf="isAdmin" mat-raised-button  class="ml-2"routerLink="/admin/subjectcontrol">Предметы</a>
+               
+            </div>
+              <div class="navbar-auth" *ngIf="!isLogin">
+                  <a mat-raised-button class="mr-4" routerLink="/signin">Войти</a>
+                  <a mat-raised-button routerLink="/registration">Регистрация</a>
+              </div>
+              <div class="navbar-auth" *ngIf="isLogin">
+                <p class="mr-4 notification">
+                    <mat-icon (click)="getMyAllNotifications()" class="userInfo cursor mr-4" data-toggle="modal" data-target="#notificationModal"  matBadge={{countNot}} matBadgeColor="warn">notifications</mat-icon>
+                    <mat-icon class="userInfo cursor mr-4" routerLink="/dialogsList" matBadge={{count}} matBadgeColor="warn">mail</mat-icon>
+                    <mat-icon class="userInfo cursor mr-4" routerLink="/friends" matBadge={{friendsNot}} matBadgeColor="warn">account_circle</mat-icon>
+                    <mat-icon class="userInfo cursor" routerLink="/groupList" matBadge={{groupsNot}} matBadgeColor="warn">people</mat-icon>
+                </p>
+                <a *ngIf="!isAdmin" mat-raised-button class="mr-2" routerLink="/myorders" >Мои заказы</a>
+                 <a *ngIf="!isAdmin" mat-raised-button class="mr-2" routerLink="/myadvertisements" >Мои объявления</a>
+                  <a mat-raised-button class="mr-2" (click)="Logout()">Выход</a>
+                   <a mat-raised-button class="mr-2"  routerLink="/userPage/{{UserInfo.userId}}">Личный Кабинет</a>
+              </div>
         </div>
-          <div class="navbar-auth" *ngIf="!isLogin">
-              <a mat-raised-button class="mr-4" routerLink="/signin">Войти</a>
-              <a mat-raised-button routerLink="/registration">Регистрация</a>
+      </nav>
+      </div>
+    
+    
+    <div  class="modal fade" id="notificationModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLongTitle">Уведомления</h5>
+              <button type="button"  class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div *ngIf="notificationsClick" class="modal-body p-0 m-0">
+                <app-notifications  [(notifications)]="notifications"></app-notifications>
+            </div>
           </div>
-          <div class="navbar-auth" *ngIf="isLogin">
-            <p class="mr-4 notification">
-                <mat-icon (click)="getMyAllNotifications()" class="userInfo cursor mr-4" data-toggle="modal" data-target="#notificationModal"  matBadge={{countNot}} matBadgeColor="warn">notifications</mat-icon>
-                <mat-icon class="userInfo cursor mr-4" routerLink="/dialogsList" matBadge={{count}} matBadgeColor="warn">mail</mat-icon>
-                <mat-icon class="userInfo cursor mr-4" routerLink="/friends" matBadge={{friendsNot}} matBadgeColor="warn">account_circle</mat-icon>
-                <mat-icon class="userInfo cursor" routerLink="/groupList" matBadge={{groupsNot}} matBadgeColor="warn">people</mat-icon>
-            </p>
-            <a *ngIf="!isAdmin" mat-raised-button class="mr-2" routerLink="/myorders" >Мои заказы</a>
-             <a *ngIf="!isAdmin" mat-raised-button class="mr-2" routerLink="/myadvertisements" >Мои объявления</a>
-              <a mat-raised-button class="mr-2" (click)="Logout()">Выход</a>
-               <a mat-raised-button class="mr-2"  routerLink="/userPage/{{UserInfo.userId}}">Личный Кабинет</a>
-          </div>
-    </div>
-  </nav>
-  </div>
-
-
-<div  class="modal fade" id="notificationModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLongTitle">Уведомления</h5>
-          <button type="button"  class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-            <app-notifications  [(notifications)]="notifications"></app-notifications>
         </div>
       </div>
-    </div>
-  </div>
