--- a/src/app/admin/user-controll/user-controll.component.scss
+++ b/src/app/admin/user-controll/user-controll.component.scss
@@ -1,29 +1,4 @@
-th
-{
-    text-align:center;
-}
-
-table {
-    width: 100%;
-  }
-
-  .mat-form-field {
-    font-size: 14px;
-    width: 100%;
-  }
-  
-
-  mat-button-toggle-group {
-    margin-left: 12px;
-  }
-
-
-  .modal-backdrop {
-    z-index: -1;
-  }
-  
-
-  @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,600,200,300,900);
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,600,200,300,900);
 
 $colors: #E89B35 #36CBE9 #A137E7 #E83568;
 
@@ -31,9 +6,8 @@ $colors: #E89B35 #36CBE9 #A137E7 #E83568;
 {
     display:flex;
     justify-content:center;
-    flex-wrap: wrap;
     align-items:center;
-    flex-direction:row;
+    flex-direction:column;
     min-width:100vw;
     min-height:100vh;
     background-color:#f6f8fa !important;
@@ -95,4 +69,3 @@ img {
 }
     
    
-  
