--- a/src/app/student/add-advertisement/add-advertisement.component.html
+++ b/src/app/student/add-advertisement/add-advertisement.component.html
@@ -1,6 +1,7 @@
 <app-navbar></app-navbar>
+<div class="add-page pt-5">
 <form *ngIf="!sendData" [formGroup]="advService.getAdvForm()" class="signIn">
-    <div class="container mt-5 ">
+    <div class="container">
         <div class="row d-flex flex-column justify-content-center  align-items-center">
             <div class="col-md-6 col-sm-12 text-center text-uppercase  signin-label font-weight-bold">Новое Объявление</div>
 			<div class="sign-in-errors">
@@ -87,7 +88,7 @@
         </div>
     </div>
 </form>
-
+</div>
 <div *ngIf='sendData' class="loading">
     <mat-spinner></mat-spinner>
 </div>
