--- a/src/app/student/add-advertisement/add-advertisement.component.scss
+++ b/src/app/student/add-advertisement/add-advertisement.component.scss
@@ -14,6 +14,12 @@
 
 }
 
+.add-page
+{
+  min-width:100vw;
+  min-height:100vh;
+  background-color:#f6f8fa !important;
+}
 .loading
 {
   width:100vw;
