--- a/src/app/allusers/notifications/notifications.component.html
+++ b/src/app/allusers/notifications/notifications.component.html
@@ -4,7 +4,7 @@
 		<div *ngFor="let not of notifications; let i = index">
 		<div class="notify_item"  >
 			<div *ngIf="not.notification.userImageKey!=undefined" class="notify_img">
-				<img src="http://localhost:1234/getuserimg/{{not.notification.userImageKey}}" alt="profile_pic" style="width:55px;">
+				<img src="http://localhost:1234/getuserimg/{{not.notification.userImageKey}}" alt="profile_pic" style="width:70px; height:70px; border-radius:50%;">
 			</div>
 			<div *ngIf="not.notification.userImageKey==undefined" class="notify_img">
 				<img src="https://dontshake.org/media/k2/items/cache/71f67488b0857639cee631943a3fc6fa_XL.jpg" alt="profile_pic" style="width:55px">
