--- a/src/app/activate-page/activate-page.component.html
+++ b/src/app/activate-page/activate-page.component.html
@@ -6,6 +6,13 @@
 		<p *ngIf="isActivate">
 				Вы прошли активацию   <i class="fas fa-check-circle"></i>
 		</p>
+
+		<div *ngIf="isActivate"  class="check-buttons mb-3">
+			<div routerLink="../../signin" style='font-size:28px; cursor:pointer;padding:15px; background-color:#e64927; color:white;'>
+				Войти <i class="fas fa-sign-in-alt"></i>
+			</div>
+		</div>
+		
 		 <p *ngIf="!isActivate">
 				Неактуальный код активации <i class="fas fa-exclamation-circle"></i>
 		</p>
