--- a/src/app/allusers/my-orders/my-orders.component.scss
+++ b/src/app/allusers/my-orders/my-orders.component.scss
@@ -281,3 +281,29 @@ $color_grey_dark: #a2a2a2;
 }
   
 
+.check-button
+{
+    width:50%;
+    padding:7px 0;
+    background-color:white;
+    display:inline-flex;
+    justify-content:center;
+
+    &:hover
+    {
+        cursor:pointer;
+    }
+}
+
+.check-button-border
+{
+    border:2px solid #e64927;
+}
+
+.check-buttons
+{
+  display:flex;
+  width:44vw;
+  justify-content:center;
+  align-items:center; 
+}
