--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -22,7 +22,7 @@
                 </p>
                 <a *ngIf="!isAdmin" mat-raised-button class="mr-2" routerLink="/myorders" >Мои заказы</a>
                  <a *ngIf="!isAdmin" mat-raised-button class="mr-2" routerLink="/myadvertisements" >Мои объявления</a>
-                  <a mat-raised-button class="mr-2" (click)="Logout()">Выход</a>
+                  <a mat-raised-button class="mr-2" routerLink="/signin" (click)="Logout()">Выход</a>
                    <a mat-raised-button class="mr-2"  routerLink="/userPage/{{UserInfo.userId}}">Личный Кабинет</a>
               </div>
         </div>
