--- a/src/app/student/add-advertisement/add-advertisement.component.scss
+++ b/src/app/student/add-advertisement/add-advertisement.component.scss
@@ -14,6 +14,20 @@
 
 }
 
+input{
+  box-shadow: 0 3px 7px -1px rgba(#000, .1);
+}
+
+textarea
+{
+    box-shadow: 0 3px 7px -1px rgba(#000, .1);
+}
+
+.tagss
+{
+  box-shadow:none;
+}
+
 .add-page
 {
   min-width:100vw;
