change group page and add photos in dialogs

--- a/src/app/ConversationComponents/messageCard/messageCard.component.html
+++ b/src/app/ConversationComponents/messageCard/messageCard.component.html
@@ -7,9 +7,12 @@
       <div class="content ">
         <div class="title">{{message.sender.name}}</div>
         <span>{{message.text}}</span>
-        <div class="widget-main" class="d-flex flex-direction-column">
-            <span *ngFor="let doc of message.files; let i = index" class="mr-2">
-                <button (click)="download(doc,message.names[i])" > <i class="fas fa-file fontFile"> {{message.names[i]}}</i></button>
+        <div class="files">
+          <div class="imag">
+            <img *ngFor="let img of messageImages" (click)="openImage(img)" [src]="img"/>
+          </div>
+            <span class="doc" *ngFor="let doc of files; let i = index" class="mr-2">
+                <button (click)="download(doc,fileNames[i])" > <i class="fas fa-file fontFile"> {{fileNames[i]}}</i></button>
             </span>
         </div>
         </div>
