--- a/src/app/ConversationComponents/dialog/dialog.component.html
+++ b/src/app/ConversationComponents/dialog/dialog.component.html
@@ -93,7 +93,7 @@
          <div *ngIf="message.sender.userId == user.userId; then thisUserMessage else enatherUserMessage"></div>
               <ng-template #thisUserMessage>
                 <div align="right">
-                  <app-message-card [(message)]="message"></app-message-card>
+                  <app-message-card [(message)]="message" (imageClick)="openImage($event)"></app-message-card>
                 </div>
               </ng-template>
               <ng-template #enatherUserMessage>
@@ -102,5 +102,8 @@
                 </div>
             </ng-template>
        </ul>
+ </div>
+ <div *ngIf="fullImage!=null" class="fullImage">
+   <img [src]="fullImage" (click)="closeImage()">
  </div>
 </body>
