--- a/src/app/ConversationComponents/dialog/dialog.component.scss
+++ b/src/app/ConversationComponents/dialog/dialog.component.scss
@@ -107,6 +107,25 @@ margin-top: 5px;
   align-items:center;
 }
 
+.fullImage {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  display: flex;
+  align-items: center;
+  background: rgba(0,0,0,0.8);
+}
+
+.fullImage img{
+  display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+
 .example-2 .btn-tertiary{color:#555;padding:0;line-height:40px;width:300px;margin:auto;display:block;border:2px solid #555}
 .example-2 .btn-tertiary:hover,.example-2 .btn-tertiary:focus{color:#888;border-color:#888}
 .example-2 .input-file{width:.1px;height:.1px;opacity:0;overflow:hidden;position:absolute;z-index:-1}
