--- a/src/app/ConversationComponents/messageCard/messageCard.component.scss
+++ b/src/app/ConversationComponents/messageCard/messageCard.component.scss
@@ -19,19 +19,23 @@
   box-shadow:0px 4px 8px 0px rgba(5,5,5,0.5);
 }
 
+.imag img{
+  width: 100%;
+}
+
 .inner-part{
   display: flex;
   width:95%;
   height:95%;
   padding: 0 5px;
   transition-delay: .3s;
-  align-items:center;
 }
 
 
 .inner-part .img{
+  margin-top: 9px;
   display:flex;
-  align-items:center;
+  align-items:flex-start;
   height:150px;
   width: 150px;
   overflow: hidden;
@@ -80,6 +84,22 @@
   font-size: 17px;
   margin-bottom:5px;
   text-align: justify;
+}
+
+.content .files{
+  display: flex;
+  flex-direction:column;
+}
+
+.files .imag {
+  margin: 5px;
+  display: flex;
+  flex-direction: row;
+}
+
+.imag img{
+  max-width: 200px;
+  max-height: 200px;
 }
 
 
