--- a/src/app/admin/change-user-properties/change-user-properties.component.scss
+++ b/src/app/admin/change-user-properties/change-user-properties.component.scss
@@ -64,6 +64,7 @@ img {
   max-width:35%;
   display:flex;
   flex-direction:column;
+  cursor: pointer;
   justify-content:center;
   align-items:center;
 }
