--- a/src/app/admin/user-document-item/user-document-item.component.scss
+++ b/src/app/admin/user-document-item/user-document-item.component.scss
@@ -62,6 +62,7 @@ img {
   min-width:35%;
   max-width:35%;
   display:flex;
+  cursor: pointer;
   flex-direction:column;
   justify-content:center;
   align-items:center;
