--- a/src/app/allusers/order-item/order-item.component.html
+++ b/src/app/allusers/order-item/order-item.component.html
@@ -1,13 +1,17 @@
 <div class="blog-card">
     <div class="meta">
-      <div class="photo" style="background-image: url(https://wptp.info/wp-content/uploads/2019/06/ie90b4zr9.jpg)"></div>
+      <div class="photo">
+        <img class="cover-img" [src]="coverImage"/>
+      </div>
       
     </div>
     <div class="description">
       <h1>{{order.advertisement.advertisementName}}</h1>
-     <h2>Заказчик - Armen Tovmasyan</h2>        
+      <h2 *ngIf="myRole=='ROLE_TEACHER'">Заказчик - <span style="cursor:pointer" routerLink="/userPage/{{order.customerId}}">{{order.customerFIO}}</span></h2>   
+      <h2 *ngIf="myRole=='ROLE_STUDENT'">Преподаватель - <span style="cursor:pointer" routerLink="/userPage/{{order.freelancerId}}" >{{order.freelancerFIO}}</span></h2>        
       <div><span class="title">Cтатус заказа - </span>{{getStatus(order.status)}}</div>
       <div><span class="title">Дата принятия заказа - </span>24.04.2020</div>
+      <div><span class="title">Дедлайн - </span>24.04.2020</div>
    
       <div *ngIf="order.starsForWork!='0' && order.status=='СOMPLETED'" >
         <div> <span class="title">Оценка - </span>
@@ -19,8 +23,8 @@
         <div> <span class="title">Комментарий - </span>{{order.comment}} </div>
       </div>
       <button *ngIf="myRole=='ROLE_TEACHER' && order.nextStatus!=undefined" (click)="changeOrderStatus(order)" class="btn btn-success mt-3" >{{getNextStatus(order.nextStatus)}}</button>
-       <button *ngIf="myRole=='ROLE_STUDENT' && order.starsForWork=='0' && order.status=='СOMPLETED'" (click)="show(order)" class="btn btn-success mt-3"  >Оценить работу</button>
-       <button *ngIf="myRole=='ROLE_STUDENT' && order.starsForWork!='0' && order.status=='СOMPLETED'" (click)="show(order)" class="btn btn-success mt-3" >Переоценить работу</button>
+       <button *ngIf="myRole=='ROLE_STUDENT' && order.starsForWork=='0' && order.status=='СOMPLETED' && !clickRate " (click)="show(order)" class="btn btn-success mt-3"  >Оценить работу</button>
+       <button *ngIf="myRole=='ROLE_STUDENT' && order.starsForWork!='0' && order.status=='СOMPLETED' && !clickRate" (click)="show(order)" class="btn btn-success mt-3" >Переоценить работу</button>
       <div *ngIf="ok" class="rating-area">           
         <input (click)="raitingClick($event,not)"  type="radio" id="star-5" name="rating" value="5">
         <label for="star-5" title="Оценка «5»"></label>	
@@ -39,7 +43,7 @@
       <div *ngIf="ok" class="button-area">
         <button type="button b" (click)="sendFeedBack(order) "class="btn btn-success" >Оценить</button>
       </div>
-      <p (click)="feed()" class="read-more">
+      <p style="cursor:pointer;" routerLink="/adv/{{order.advertisement.advertisementId}}" class="read-more">
         Подробнее
       </p>
       
