--- a/src/app/allusers/order-item/order-item.component.scss
+++ b/src/app/allusers/order-item/order-item.component.scss
@@ -300,3 +300,10 @@ $color_grey_dark: #a2a2a2;
 	text-shadow: 1px 1px #c60;
 }
 
+
+.cover-img
+{
+  width:100%;
+  height:100%;
+  object-fit: cover; 
+}
