--- a/src/app/userpage2/userpage2.component.html
+++ b/src/app/userpage2/userpage2.component.html
@@ -47,7 +47,9 @@
 
                     <div class="col-xs-12 col-sm-9">
                         <h4 class="blue">
-                            <span class="middle mr-3">{{user.firstname}} {{user.lastname}}</span>
+                            <span class="middle mr-3">{{user.firstname}} {{user.lastname}}  
+                                <span *ngIf="user.teacherStatus=='CERTIFIED_SPECIALIST'"><i class="fas fa-check-circle"></i></span>
+                            </span>
 
                             <span *ngIf="user.isOnline" span class="label label-purple  c-orange arrowed-in-right">
                                 <i class="fas fa-mobile-alt c-orange mr-1"></i>
@@ -87,6 +89,17 @@
 
                                 <div class="profile-info-value">
                                     <span>{{user.reiting}}</span>
+                                </div>
+                            </div>
+
+                            <div *ngIf="user.roleName=='ROLE_TEACHER'" class="profile-info-row">
+                                <div class="profile-info-name">Статус</div>
+
+                                <div class="profile-info-value">
+                                    <span *ngIf="user.teacherStatus=='CERTIFIED_SPECIALIST'">Сертифицированный специалист</span>
+                                    <span *ngIf="user.teacherStatus=='NOT_A_CERTIFIED_SPECIALIST'">Несертифицированный специалист</span>
+                                    <span *ngIf="user.teacherStatus=='CERTIFICATES_ARE_NOT_CHECKED'">Сертификаты проверяются</span>
+                                    <span *ngIf="user.teacherStatus=='EMPTY'">Не предоставил сертификаты</span>
                                 </div>
                             </div>
                            
@@ -138,9 +151,20 @@
                             <div *ngIf="checkRequests" class="widget-body">
                                 <div class="widget-main">
                                     <div  *ngFor="let not of notifications; let i = index">
-                                        <span >{{not.message}}</span> 
+                                        <div class="notify_item"  >
+                                            <div *ngIf="not.notification.userImageKey!=undefined" class="notify_img">
+                                                <img src="http://localhost:1234/getuserimg/{{not.notification.userImageKey}}" alt="profile_pic" style="width:70px; height:70px; border-radius:50%;">
+                                            </div>
+                                            <div *ngIf="not.notification.userImageKey==undefined" class="notify_img">
+                                                <img src="https://dontshake.org/media/k2/items/cache/71f67488b0857639cee631943a3fc6fa_XL.jpg" alt="profile_pic" style="width:55px">
+                                            </div>
+                                            <div class="notify_info mt-3" style="text-align:center;">
+                                                <p>{{not.notification.senderFIO}} {{not.notification.message}}<span> {{not.advertisementName}}</span></p>
+                                                <span class="notify_time"></span>
+                                            </div>
+                                        </div>
                                         <div class="notif-buttons mt-2">
-                                            <a href="/myorders"><button type="button b" class="btn btn-success mr-2" (click)="onAccept(not)">Принять</button></a>
+                                            <a><button type="button b" class="btn btn-success mr-2" (click)="onAccept(not)">Принять</button></a>
                                             <button type="button" class="btn btn-warning mr-2" (click)="onReject(not)">Отклонить</button>
                                             <button  type="button" class="btn btn-success" ><a href="/adv/{{not.advertisementId}}" class="ft">Поднобнее</a></button>
                                             </div>
@@ -172,9 +196,9 @@
 
                             <div *ngIf="checkDocuments" class="widget-body">
                                 <div class="widget-main" class="d-flex flex-direction-column">
-                                    <span *ngFor="let doc of user.documentKeys; let i = index" class="mr-2">
-                                        <div (click)="download(doc)" ><i class="fas fa-file fontFile"></i></div>
-                                        <div class="fontFileName">{{doc.split('_')[1]}}</div>
+                                    <span *ngFor="let doc of documents; let i = index" class="mr-2">
+                                        <div (click)="download(doc.documentKey)" ><i class="fas fa-file fontFile"></i></div>
+                                        <div class="fontFileName">{{doc.documentKey.split('_')[1]}}</div>
                                     </span>
                                 </div>
                             </div>
