--- a/src/app/admin/change-user-properties/change-user-properties.component.scss
+++ b/src/app/admin/change-user-properties/change-user-properties.component.scss
@@ -94,6 +94,51 @@ img {
   overflow:auto;
   box-shadow:0px 4px 8px 0px rgba(5,5,5,0.5);
 }
+
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+
+
+
+.search {
+  width: 40%;
+  min-height:100px;
+  position: relative;
+  display: flex;
+}
+
+.searchTerm {
+  width: 100%;
+  border: 3px solid #00B4CC;
+  border-right: none;
+  padding: 5px;
+  height: 50px;
+  border-radius: 5px 0 0 5px;
+  outline: none;
+  color:black !important;
+}
+
+.searchTerm:focus{
+  color: #00B4CC;
+}
+
+.searchButton {
+  width: 40px;
+  height: 50px;
+  border: 1px solid #00B4CC;
+  background: #00B4CC;
+  text-align: center;
+  color:#fff;
+  border-radius: 0 5px 5px 0;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+/*Resize the wrap to see the search bar change!*/
+.wrap{
+  width:100vw;
+  display:flex;
+  justify-content:center;
+}
     
    
   
