--- a/src/app/admin/teacher-documents/teacher-documents.component.scss
+++ b/src/app/admin/teacher-documents/teacher-documents.component.scss
@@ -31,3 +31,84 @@ table {
     text-decoration:none;
     color:black !important;
   }
+
+  .cards
+  {
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    flex-wrap:wrap;
+  }
+
+  .check-button
+{
+    width:50%;
+    padding:7px 0;
+    background-color:white;
+    display:inline-flex;
+    justify-content:center;
+
+    &:hover
+    {
+        cursor:pointer;
+    }
+}
+
+.check-button-border
+{
+    border:2px solid #e64927;
+}
+
+.check-buttons
+{
+  display:flex;
+  width:44vw;
+  justify-content:center;
+  align-items:center; 
+}
+
+
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+
+
+
+.search {
+  width: 40%;
+  min-height:100px;
+  position: relative;
+  display: flex;
+}
+
+.searchTerm {
+  width: 100%;
+  border: 3px solid #00B4CC;
+  border-right: none;
+  padding: 5px;
+  height: 50px;
+  border-radius: 5px 0 0 5px;
+  outline: none;
+  color:black !important;
+}
+
+.searchTerm:focus{
+  color: #00B4CC;
+}
+
+.searchButton {
+  width: 40px;
+  height: 50px;
+  border: 1px solid #00B4CC;
+  background: #00B4CC;
+  text-align: center;
+  color:#fff;
+  border-radius: 0 5px 5px 0;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+/*Resize the wrap to see the search bar change!*/
+.wrap{
+  width:100vw;
+  display:flex;
+  justify-content:center;
+}
